<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/btn_nav_home" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_nav_magnifer"
        android:title="@string/btn_nav_search" />
    <item
        android:id="@+id/mapFragment"
        android:icon="@drawable/ic_nav_location"
        android:title="@string/btn_nav_map" />
    <item
        android:id="@+id/wishListFragment"
        android:icon="@drawable/ic_nav_heart"
        android:title="@string/btn_nav_wishlist" />
    <item
        android:id="@+id/myPageFragment"
        android:icon="@drawable/ic_nav_smiley"
        android:title="@string/btn_nav_mypage" />
</menu>