<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/sub_pink">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white">

                    <ImageView
                        android:id= "@+id/logo_home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:src="@drawable/logo"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btn_home_stay"
                        style="@style/Home_ButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="15dp"
                        android:drawableTop="@drawable/ic_home_stay"
                        android:text="@string/all_stay"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/logo_home" />

                    <Button
                        android:id="@+id/btn_home_destination"
                        style="@style/Home_ButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:drawableTop="@drawable/ic_home_destination"
                        android:text="@string/home_destination"
                        app:layout_constraintEnd_toStartOf="@+id/btn_home_restaurant"
                        app:layout_constraintStart_toEndOf="@+id/btn_home_stay"
                        app:layout_constraintTop_toBottomOf="@+id/logo_home" />

                    <Button
                        android:id="@+id/btn_home_restaurant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="50dp"
                        android:background="@color/transparent"
                        android:drawableTop="@drawable/ic_home_restaurant"
                        android:text="@string/home_restaurant"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/logo_home" />

                    <Button
                        android:id="@+id/btn_home_caretrip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginBottom="22dp"
                        android:background="@color/transparent"
                        android:drawableTop="@drawable/ic_home_caretrip"
                        android:paddingLeft="0dp"
                        android:paddingRight="0dp"
                        android:text="@string/all_caretrip"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <Button
                        android:id="@+id/btn_home_charge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="22dp"
                        android:background="@color/transparent"
                        android:drawableTop="@drawable/ic_home_charge"
                        android:text="@string/home_charge"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/btn_home_rental"
                        app:layout_constraintStart_toEndOf="@+id/btn_home_caretrip"
                        app:layout_constraintTop_toBottomOf="@+id/btn_home_destination" />

                    <Button
                        android:id="@+id/btn_home_rental"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="50dp"
                        android:layout_marginBottom="22dp"
                        android:background="@color/transparent"
                        android:drawableTop="@drawable/ic_home_rental"
                        android:text="@string/home_rental"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:layout_marginTop="9dp">

                    <TextView
                        android:id="@+id/tv_stay_nearby"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="23dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/all_stay_nearby"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btn_stay_more_info"
                        style="@style/Home_MoreInfoBtnStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginTop="-4dp"
                        android:layout_marginEnd="22dp"
                        android:layout_marginBottom="-4dp"
                        android:drawableEnd="@drawable/ic_front"
                        android:paddingHorizontal="15dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="1dp"
                        android:text="@string/all_more_info"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_stay_nearby"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tv_stay_nearby" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_near_hotel_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_stay_nearby" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:layout_marginTop="9dp">

                    <TextView
                        android:id="@+id/tv_charge_nearby"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="23dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/all_charge_nearby"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btn_charge_more_info"
                        style="@style/Home_MoreInfoBtnStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginTop="-4dp"
                        android:layout_marginEnd="22dp"
                        android:layout_marginBottom="-4dp"
                        android:drawableEnd="@drawable/ic_front"
                        android:paddingHorizontal="15dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="1dp"
                        android:text="@string/all_more_info"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_charge_nearby"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tv_charge_nearby" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_charge_list"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_charge_nearby"
                        app:layout_constraintVertical_bias="0.0" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

        </ScrollView>

    </FrameLayout>
</layout>
